--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<script>
   		function openGame() {
   			var win = window.open()
-  			var url = "https://bouncingdvdlogo.com/"
+  			var url = "https://play.google.com/store/apps/details?id=org.yuzu.yuzu_emu&hl=en&gl=US"
   			var iframe = win.document.createElement('iframe')
   			iframe.style.width = "100%";
   			iframe.style.height = "100%";
