--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   	<script>
   		function openGame() {
   			var win = window.open()
-  			var url = "https://open.spotify.com/"
+  			var url = "https://yyyyyyy.info/"
   			var iframe = win.document.createElement('iframe')
   			iframe.style.width = "100%";
   			iframe.style.height = "100%";
